--- a/Tarefas.html
+++ b/Tarefas.html
@@ -34,31 +34,29 @@
         </div>
 
         <div class="popup">
-        <header>
-            <h1><span>
-                <img src="Imagens/clipboard.png" alt='tarefas' width="50" height="50">
-                <b>Tarefas</b>
-            </span></h1>
-        </header>
+            <div class="popup2">
+                <header class="linha" id="popup_header">
+                    <img src="Imagens/clipboard.png" alt='tarefas' width="50" height="50">
+                    <b>Tarefas</b>
+                </header>
 
-        <main>
-            <ul class="tarefas_list">
-                <li>
-                    <p>Liberar passagem para saída do carro na 3B </p>
-                </li>
-                <li>
-                    <p>Reservada vaga para carro que chegará às 13h </p>
-                </li>
-                <li>
-                    <p>Reservar vaga para carro que chegará às 13h </p>
-                </li>
-            </ul>
-
-            <a href="index.html">
-            <img src="Imagens/back.png" alt='Botão de voltar' width="25" height="25">
-            </a>
-        </main>
-
-    </div>
+                <main>
+                    <ul class="tarefas_list">
+                        <li>
+                            <p>Liberar passagem para saída do carro na 3B </p>
+                        </li>
+                        <li>
+                            <p>Reservada vaga para carro que chegará às 13h </p>
+                        </li>
+                        <li>
+                            <p>Reservar vaga para carro que chegará às 13h </p>
+                        </li>
+                    </ul>
+                    <a href="index.html">
+                        <img src="Imagens/back.png" alt='Botão de voltar' width="25" height="25">
+                    </a>
+                </main>
+            </div>
+        </div>
     </body>
 </html>
