--- a/teste.html
+++ b/teste.html
@@ -67,6 +67,6 @@
             <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
         </div>
     </div>
-
+<button class="botao_taf"><img src="Imagens/clipboard.png" alt='tarefas' width=25rem height=25rem></button>
 </body>
 </html>
