--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
             </ul>
         </header>
         <main>
-            <hr>
-            <h2> <!--Subtítulos-Os pisos-->
-            <a href="Piso1.html">
-             Piso 1 </a></h2><hr> <!--Piso 1 do fluxo de tela-->
-             <h2> Piso 2</h2> <hr>
-             <h2> Piso 3</h2> <hr>
-             <h2> Piso 4 </h2> <hr>
-            <a href="tarefas.html">
-                <img src="Imagens/clipboard.png" alt='tarefas' 
-                    width="50" height="50"></a>
-            <a href="tarefas.html"><p>
-                <b>Tarefas
-            </b></p></a>
+            <h2 class="piso_inic"> <!--Subtítulos-Os pisos-->
+            <a href="Piso1.html" class="margem_inf">
+              Piso 1 </a> <!--Piso 1 do fluxo de tela-->
+            <a href="" class="margem_inf">  
+              Piso 2  </a>
+            <a href="" class="margem_inf">  
+              Piso 3  </a>
+            <a href=""  class="margem_inf">  
+              Piso 4  </a></h2> 
+            <button class="botao_taf">
+                <a href="tarefas.html">
+                    <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
+                </a>
+            </button>
         </main>
     </body>
 </html>
