tentaiva de centralizar

--- a/detalhes_cliente.html
+++ b/detalhes_cliente.html
@@ -35,6 +35,7 @@
     </div>
 
     <div class="popup">
+        <div class="popup2">
         <main>
             <h2>
                 [G4] <!--Vaga escolhida -->
@@ -58,6 +59,7 @@
                 <img src="Imagens/back.png" height=25 width=25 alt="Botão de voltar">
             </a>
         </main>
+        </div>
     </div>
 
     </body>
