Adiciona viewport e corrige alguns erros

--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -3,6 +3,7 @@
 <head>
     <title> Estacionado - Histórico </title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Sketches_css/reset.css">
     <link rel="stylesheet" href="Sketches_css/style.css">
 </head>
