--- a/Analise_hist.html
+++ b/Analise_hist.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Estacionado - Analise do histórico</title>
         <link rel="stylesheet" href="Sketches_css/reset.css">
         <link rel="stylesheet" href="Sketches_css/style.css">
