--- a/teste.html
+++ b/teste.html
@@ -3,15 +3,16 @@
 <head>
     <title> Estacionado - Detalhes Vagas </title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Sketches_css/reset.css">
     <link rel="stylesheet" href="Sketches_css/style.css">
 </head>
 <body>
     <header class="cabecario">
         <ul>
-            <il><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></il>
-            <il><h1 id="title">Estacionado</h1></il>
-            <il><img src="Imagens/Logo.png"alt="Logo"></il>
+            <li><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></li>
+            <li><h1 id="title">Estacionado</h1><li>
+            <li><img src="Imagens/Logo.png" alt="Logo"></li>
         </ul>
     </header>
     <main>
