--- a/Analise_hist.html
+++ b/Analise_hist.html
@@ -12,7 +12,7 @@
     <!--Cabeçalho igual para todas as páginas-->
     <body>
         <header class="cabecario">
-            <ul>
+            <ul class="retirar">
                 <il><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></il>
                 <il><h1 id="title">Estacionado</h1></il>
                 <il><img src="Imagens/Logo.png"alt="Logo"></il>
