--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     </head>
     <body>
         <header class="cabecario">
-            <ul>
-                <li><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></li>
-                <li><h1 id="title">Estacionado</h1></li>
-                <li><img src="Imagens/Logo.png" alt="Logo"></li>
-            </ul>
+          <ul class="retirar">
+            <il><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></il>
+            <il><h1 id="title">Estacionado</h1></il>
+            <il><img src="Imagens/Logo.png"alt="Logo"></il>
+        </ul>
         </header>
         <main>
             <h2 class="piso_inic"> <!--Subtítulos-Os pisos-->
