--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -10,7 +10,7 @@
     <body>
         <!--Com cabeçalho-->
         <header class="cabecario">
-            <ul>
+            <ul class="retirar">
                 <il><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></il>
                 <il><h1 id="title">Estacionado</h1></il>
                 <il><img src="Imagens/Logo.png"alt="Logo"></il>
