--- a/teste2.html
+++ b/teste2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecario">
-        <ul>
+        <ul class="retirar">
             <il><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></il>
             <il><h1 id="title">Estacionado</h1></il>
             <il><img src="Imagens/Logo.png"alt="Logo"></il>
