--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -11,9 +11,9 @@
         <!--Com cabeçalho-->
         <header class="cabecario">
             <ul class="retirar">
-                <il><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></il>
-                <il><h1 id="title">Estacionado</h1></il>
-                <il><img src="Imagens/Logo.png"alt="Logo"></il>
+                <li><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></li>
+                <li><h1 id="title">Estacionado</h1></li>
+                <li><img src="Imagens/Logo.png"alt="Logo"></li>
             </ul>
         </header>
 
