--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+  
     <head>
         <title> Estacionado - Página Inicial </title>
         <meta charset="UTF-8">
@@ -7,16 +8,18 @@
         <link rel="stylesheet" href="Sketches_css/reset.css">
         <link rel="stylesheet" href="Sketches_css/style.css">
     </head>
+
     <body>
         <header class="cabecario">
           <ul class="retirar">
-            <il><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></il>
-            <il><h1 id="title">Estacionado</h1></il>
-            <il><img src="Imagens/Logo.png"alt="Logo"></il>
-        </ul>
+            <li><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></li>
+            <li><h1 id="title">Estacionado</h1></li>
+            <li><img src="Imagens/Logo.png"alt="Logo"></li>
+          </ul>
         </header>
+
         <main>
-            <h2 class="piso_inic"> <!--Subtítulos-Os pisos-->
+          <h2 class="piso_inic"> <!--Subtítulos-Os pisos-->
             <a href="Piso1.html" class="margem_inf">
               Piso 1 </a> <!--Piso 1 do fluxo de tela-->
             <a href="" class="margem_inf">  
@@ -24,12 +27,14 @@
             <a href="" class="margem_inf">  
               Piso 3  </a>
             <a href=""  class="margem_inf">  
-              Piso 4  </a></h2> 
-            <button class="botao_taf">
-                <a href="tarefas.html">
-                    <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
-                </a>
-            </button>
+              Piso 4  </a>
+          </h2> 
+          <button class="botao_taf">
+              <a href="tarefas.html">
+                  <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
+              </a>
+          </button>
         </main>
+
     </body>
 </html>
