--- a/Piso1.html
+++ b/Piso1.html
@@ -1,53 +1,66 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <title> Estacionado - Piso 1 </title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="Sketches_css/reset.css">
-        <link rel="stylesheet" href="Sketches_css/style.css">
-    </head>
-    <body>
-        <header class="cabecario">
-            <ul class="retirar">
-                <li><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></li>
-                <li><h1 id="title">Estacionado</h1></li>
-                <li><img src="Imagens/Logo.png"alt="Logo"></li>
-            </ul>
-        </header>
-        <main>
-            <h2><span>
-                <a href="index.html">
-                    <img src="Imagens/back.png" alt="Botão de Voltar" height=25 width=25>
-                </a>
-                <b>PISO 1</b>
-            </span></h2>
+<head>
+    <title> Estacionado - Detalhes Vagas </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Sketches_css/reset.css">
+    <link rel="stylesheet" href="Sketches_css/style.css">
+</head>
+<body>
+    <header class="cabecario">
+        <ul class="retirar">
+            <li><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></li>
+            <li><h1 id="title">Estacionado</h1></li>
+            <li><img src="Imagens/Logo.png"alt="Logo"></li>
+        </ul>
+    </header>
+    <main>
+    <h2><span>
+        <a href="index.html">
+            <img src="Imagens/back.png" alt="Botão de Voltar" height=25 width=25>
+        </a>
+        <b>PISO 1</b>
+    </span></h2>
+    </main>
+    <div class="coluna">
+        <div class="linha">
+            <p>-</p>
+            <p>E</p>
+            <p>F</p>
+            <p>G</p>
+            <p>H</p>
+        </div>
+        <div class="linha">
+            <p>1</p>
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+        </div>
+        <div class="linha">
+            <p>2</p>
+            <img src="Imagens/triangle.png" alt="Vaga agendada">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+        </div>
 
-            <!--Forma que o grupo encontrou para simular a interação com a "maquete do estacionamento":-->
-            <span>
-
-            <!--Dividida em duas fotos, clica em um lado, vai para uma tela, clica no outro, levado para outro "fluxo" -->
-            <a href="detalhes_vaga.html">
-                <img src="Imagens/Vagas1.png" alt="Atenção">
-            </a>
-            <a href="detalhes_cliente.html">
-                <img src="Imagens/Vagas2.png" alt="Vagas ocupadas">
-            </a>
-            </span>
-            <p><span>
-                Legenda
-                &emsp;&emsp;
-                <img src="Imagens/Seta1.png"  alt="Voltar" height=10 width=10>
-                Área 1
-                <img src="Imagens/Seta2.png" alt="Avançar" height=10 width=10>
-            </span></p>
-
-            <p><span>
-                <a href="Analise_hist.html">
-                    Historico
-                    <img src="Imagens/Graphic.png" alt="Histórico" height=20 width=20>
-                </a>
-            </span></p>
-        </main>
-    </body>
+        <div class="linha">
+            <p>3</p>
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/triangle.png" alt="Vaga agendada">
+        </div>
+        <div class="linha">
+            <p>4</p>
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+        </div>
+    </div>
+<button class="botao_taf"><img src="Imagens/clipboard.png" alt='tarefas' width=25rem height=25rem></button>
+</body>
 </html>
