--- a/Piso1.html
+++ b/Piso1.html
@@ -25,7 +25,7 @@
     </main>
     <div class="coluna">
         <div class="linha">
-            <p>-</p>
+            <p>+</p>
             <p>E</p>
             <p>F</p>
             <p>G</p>
@@ -36,12 +36,12 @@
             <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
             <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
             <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
-            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
         </div>
         <div class="linha">
             <p>2</p>
             <img src="Imagens/triangle.png" alt="Vaga agendada">
-            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
             <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
             <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
         </div>
@@ -55,10 +55,22 @@
         </div>
         <div class="linha">
             <p>4</p>
+            <img src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
+            <img src="Imagens/triangle.png" alt="Vaga agendada">
+            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+        </div>
+        <div class="linha">
+            <p>5</p>
             <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
             <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
             <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
             <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+        </div>
+        <div class="linha">
+            <button class="botao_leg">
+                Legenda
+            </button>
         </div>
     </div>
 <button class="botao_taf"><img src="Imagens/clipboard.png" alt='tarefas' width=25rem height=25rem></button>
