--- a/Tarefas.html
+++ b/Tarefas.html
@@ -35,28 +35,26 @@
         </div>
 
         <div class="popup">
-            <div class="popup2">
-                <header class="linha" id="popup_header">
-                    <img src="Imagens/clipboard.png" alt='tarefas' width="50" height="50">
-                    <b>Tarefas</b>
-                </header>
+            <div class="fake_header">
+                <img src="Imagens/clipboard.png" alt='tarefas' id="taf">
+                <b>Tarefas</b>
+            </div>
 
-                <main>
-                    <ul class="tarefas_list">
-                        <li>
-                            <p>Liberar passagem para saída do carro na 3B </p>
-                        </li>
-                        <li>
-                            <p>Reservada vaga para carro que chegará às 13h </p>
-                        </li>
-                        <li>
-                            <p>Reservar vaga para carro que chegará às 13h </p>
-                        </li>
-                    </ul>
-                    <a href="index.html">
-                        <img src="Imagens/back.png" alt='Botão de voltar' width="25" height="25">
-                    </a>
-                </main>
+            <div class="fake_main">
+                <ul class="alinhamento">
+                    <li>
+                        <p>Liberar passagem para saída do carro na 3B </p>
+                    </li>
+                    <li>
+                        <p>Reservada vaga para carro que chegará às 13h </p>
+                    </li>
+                    <li>
+                        <p>Reservar vaga para carro que chegará às 13h </p>
+                    </li>
+                </ul>
+                <a href="index.html">
+                    <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
+                </a>
             </div>
         </div>
     </body>
