Alterações pequenas, desculpa mat tiramos seu '+'

--- a/Piso1.html
+++ b/Piso1.html
@@ -25,7 +25,7 @@
     </main>
     <div class="coluna">
         <div class="linha">
-            <p>+</p>
+            <p></p>
             <p>E</p>
             <p>F</p>
             <p>G</p>
@@ -73,6 +73,10 @@
             </button>
         </div>
     </div>
-<button class="botao_taf"><img src="Imagens/clipboard.png" alt='tarefas' width=25rem height=25rem></button>
+    <button class="botao_taf">
+        <a href="tarefas.html">
+            <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
+        </a>
+    </button>
 </body>
 </html>
