Finalizando detalhes clientes

--- a/detalhes_cliente.html
+++ b/detalhes_cliente.html
@@ -11,57 +11,35 @@
 </head>
 
 <body>
-     <!--Só um teste-->
-     <p>
-        My sketch is more of a departure, and takes it firmly into Antiqua territory. I
-        added quite a bit of contrast (and should probably tone it back down, at least
-        in the Normal) and the serifs are bracketed. I also widened the overall
-        proportion a bit, so the rounds fit in better with the visually wider seriffed
-        characters. I tried to keep as many of the salient features intact as I could,
-        but it’s a definite departure from Meta. That may not be a bad thing, though,
-        because I do think they look good together, and a real Antiqua would probably
-        have a longer shelf life. Besides the contrast, I haven’t settled on a shape for
-        the ball terminals yet – see what you think of the various options.
-    </p>
-    <p>
-        The slab is closer to what you and I had dicussed in the past, but my grand plan
-        (and the underlying reason why I think Meta Serif should be an Antiqua) is to
-        draw Unit Serif as well, and let that one be a real Egyptian. Its forms are
-        simpler and stiffer anyway, and we’ve already got the serif weight and shape
-        figured out on I, i and j. In the end, I think we’d end up with a serif and slab
-        that could be used together, and they’d be compatible with both FF Meta and FF
-        Unit.
-    </p>
     <div class="atras">
     </div>
 
     <div class="popup">
-        <div class="popup2">
-        <main>
-            <h2>
-                [G4] <!--Vaga escolhida -->
-            </h2>
-            <p><span>
-            <img src="Imagens/change.png" width="40" height="40" alt="Foto do cliente"/>
-                Franscisco Lid
-            </span></p>        
-            <em>
-                HJC8607 <!--Placa do veículo importante! Enfatizar!-->
-            </em>
-            <p>
-                Chegada: 14:36
-            </p>
-            <p>
-                Saída: 23:40
-            </p>
+        <div class="fake_header">
+            <h1 id="vaga"><b>G4</b></h1>
+        </div>
 
-            <!--"Botão"(Hiperlink por enquanto) de voltar-->
-            <a href="Piso1.html">
-                <img src="Imagens/back.png" height=25 width=25 alt="Botão de voltar">
+        <div class="fake_main">
+            <ul id="align_cli">
+                <li id="align_cli_img">
+                    <img src="Imagens/change.png" id="perfil" alt="Foto do cliente"/>
+                    <h2>Franscisco Lid</h2>
+                </li>
+                <li>
+                    <p><em>HJC8607</em></p>
+                </li>
+                <li>
+                    <p>Chegada: 14:36</p>
+                </li>
+                <li>
+                    <p>Saída: 23:40</p>
+                </li>
+            </ul>
+            
+            <a href="index.html">
+                <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
             </a>
-        </main>
         </div>
     </div>
-
-    </body>
+</body>
 </html>
