--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -1,46 +1,72 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <title> Estacionado - Histórico </title>
+    <title> Estacionado - Detalhes Vagas </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Sketches_css/reset.css">
     <link rel="stylesheet" href="Sketches_css/style.css">
 </head>
-    <body>
-        <!--Com cabeçalho-->
-        <header class="cabecario">
-            <ul class="retirar">
-                <li><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></li>
-                <li><h1 id="title">Estacionado</h1></li>
-                <li><img src="Imagens/Logo.png"alt="Logo"></li>
-            </ul>
-        </header>
+<body>
+    <header class="cabecario">
+        <ul class="retirar">
+            <li><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></li>
+            <li><h1 id="title">Estacionado</h1></li>
+            <li><img src="Imagens/Logo.png"alt="Logo"></li>
+        </ul>
+    </header>
+    <main>
+    <h2><span>
+        <a href="index.html">
+            <img src="Imagens/back.png" alt="Botão de Voltar" height=25 width=25>
+        </a>
+        <b>PISO 1</b>
+    </span></h2>
+    </main>
+    <div class="coluna">
+        <div class="linha">
+            <p></p>
+            <p>E</p>
+            <p>F</p>
+            <p>G</p>
+            <p>H</p>
+        </div>
+        <div class="linha">
+            <p>1</p>
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img class = "first" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img class = "first" src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
+        </div>
+        <div class="linha">
+            <p>2</p>
+            <img src="Imagens/triangle.png" alt="Vaga agendada">
+            <img src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
+            <img class = "first" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img class = "first" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+        </div>
 
-        <main>
-            <h2><span>
-                <a href="Analise_hist.html">
-                    <img src="Imagens/back.png" alt="Seta de voltar" height=25 width=25>
-                </a>
-                <b>PISO 1</b>
-            </span></h2>
-
-            <a>
-                <img src="Imagens/historico.png" alt='Gráfico'>
-            </a>
-
-            <p><span>
-                Recomendação
-                &emsp;&emsp;
-                <img src="Imagens/Seta1.png" alt="Voltar" height=10 width=10>
-                Área 1
-                <img src="Imagens/Seta2.png" alt="Avançar" height=10 width=10>
-            </span></p>
-
-            <p><span>
-                Área pouco utilizada <br>
-                Área muito utilizada
-            </span></p>
-        </main>
-    </body>
+        <div class="linha">
+            <p>3</p>
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img class = "first" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img class = "first" src="Imagens/triangle.png" alt="Vaga agendada">
+        </div>
+        <div class="linha">
+            <p>4</p>
+            <img src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
+            <img class = "second" src="Imagens/triangle.png" alt="Vaga agendada">
+            <img class = "second" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img class = "second" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+        </div>
+        <div class="linha">
+            <p>5</p>
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img class = "second" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img class = "second" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img class = "second" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+        </div>
+    </div>
+</body>
 </html>
