--- a/detalhes_vaga.html
+++ b/detalhes_vaga.html
@@ -7,58 +7,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Sketches_css/reset.css">
     <link rel="stylesheet" href="Sketches_css/style.css">
-</head>
+
+</head>  
     <body>
-         <!--Só um teste-->
-         <p>
-            My sketch is more of a departure, and takes it firmly into Antiqua territory. I
-            added quite a bit of contrast (and should probably tone it back down, at least
-            in the Normal) and the serifs are bracketed. I also widened the overall
-            proportion a bit, so the rounds fit in better with the visually wider seriffed
-            characters. I tried to keep as many of the salient features intact as I could,
-            but it’s a definite departure from Meta. That may not be a bad thing, though,
-            because I do think they look good together, and a real Antiqua would probably
-            have a longer shelf life. Besides the contrast, I haven’t settled on a shape for
-            the ball terminals yet – see what you think of the various options.
-        </p>
-        <p>
-            The slab is closer to what you and I had dicussed in the past, but my grand plan
-            (and the underlying reason why I think Meta Serif should be an Antiqua) is to
-            draw Unit Serif as well, and let that one be a real Egyptian. Its forms are
-            simpler and stiffer anyway, and we’ve already got the serif weight and shape
-            figured out on I, i and j. In the end, I think we’d end up with a serif and slab
-            that could be used together, and they’d be compatible with both FF Meta and FF
-            Unit.
-        </p>
         <div class="atras">
         </div>
 
         <div class="popup">
-        <div class="popup2">
-            <main>
-                <h2><span>
-                    <img src="Imagens/bleach.png" alt="Triângulo" height=25 width=25>
-                    2E <!--A vaga em sí-->
-                </span></h2>
-                <em>
-                    Placa: HJC-9805
-                </em>
-                <p>
-                    Dono do Carro
-                </p>
-                    [HB20 prata]
-                <p>
-                    Está a caminho
-                </p>
-                <span>
-                    <a href="Piso1.html">
-                        <img src="Imagens/back.png" alt="Botão de voltar" height=25 width=25>
-                    </a>
-                    <img src="Imagens/clock.png" height=25 width=25 alt="Relógio">
-                    3 Minutos e 40 Secs
-                </span>
-            </main>
-        </div>
+            <div class="fake_header">
+                <h1 id="vaga"><img id="tri_vaga" src="Imagens/bleach.png" alt="Triângulo"><b>2E</b></h1>
+            </div>
+            <div class="fake_main">
+                <ul id="align_cli">
+                    <li>
+                        <p><em>HJC-9805</em></p>
+                    </li>
+                    <li>
+                        <p>Dono do Carro</p>
+                    </li>
+                    <li>
+                        <p><em>[HB20 prata]</em></p>
+                    </li>
+                    <li>
+                        <p>Está a caminho</p>
+                    </li>
+                    <li id="align_cli_img">
+                        <img src="Imagens/clock.png" height=25 width=25 alt="Relógio">
+                        <h2>3 Minutos e 40 Secs</h2>
+                    </li>
+                </ul>
+                <a href="index.html">
+                    <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
+                </a>
+            </div>
         </div>
     </body>
 </html>
+
+
+    
