--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -41,7 +41,7 @@
         <div class="linha">
             <p>2</p>
             <img src="Imagens/triangle.png" alt="Vaga agendada">
-            <img src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
+            <img src="Imagens/Exclamacao.png" alt="Recomendação">
             <img class = "first" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
             <img class = "first" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
         </div>
@@ -49,7 +49,7 @@
         <div class="linha">
             <p>3</p>
             <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
-            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img src="Imagens/Exclamacao.png" alt="Recomendação">
             <img class = "first" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
             <img class = "first" src="Imagens/triangle.png" alt="Vaga agendada">
         </div>
