--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
             <a href=""  class="margem_inf">  
               Piso 4  </a>
           </h2> 
-          <button class="botao_taf">
-              <a href="tarefas.html">
-                  <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
-              </a>
+          <button class="botao_taf" href="tarefas.html">
+            <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
           </button>
         </main>
 
