--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -67,6 +67,19 @@
             <img class = "second" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
             <img class = "second" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
         </div>
+        <div class="linha"></div>
+        <div class="linha">
+            <img src="Imagens/Exclamacao.png" alt="Recomendação">
+            <p>-Recomendação</p>
+        </div>
+        <div class="linha">
+            <img src="Imagens/Exclamacao.png" alt="Recomendação">
+            <p>-Área Pouco Utilizada</p>
+        </div>
+        <div class="linha">
+            <img src="Imagens/Exclamacao.png" alt="Recomendação">
+            <p>-Área Muito Utilizada</p>
+        </div>
     </div>
 </body>
 </html>
