--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
             <a href=""  class="margem_inf">  
               Piso 4  </a>
           </h2> 
-          <button class="botao_taf">
-              <a href="tarefas.html">
-                  <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
-              </a>
-          </button>
+          <a class="botao_taf" href="tarefas.html">
+            <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
+          </a>
         </main>
     </body>
 </html>
