--- a/Piso1.html
+++ b/Piso1.html
@@ -73,10 +73,8 @@
             </button>
         </div>
     </div>
-    <button class="botao_taf">
-        <a href="tarefas.html">
-            <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
-        </a>
-    </button>
+    <a class="botao_taf" href="tarefas.html">
+        <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
+    </a>
 </body>
 </html>
