--- a/Tarefas.html
+++ b/Tarefas.html
@@ -12,7 +12,7 @@
     <body>
         <div class="atras">
         </div>
-
+        <!--Criação de um popup-->
         <div class="popup">
             <div class="fake_header">
                 <img src="Imagens/clipboard.png" alt='tarefas' id="taf">
@@ -21,6 +21,7 @@
 
             <div class="fake_main">
                 <ul class="alinhamento">
+                    <!--Tarefas a fazer pelo usuário-->
                     <li>
                         <p>Liberar passagem para saída do carro na 3B </p>
                     </li>
