--- a/detalhes_cliente.html
+++ b/detalhes_cliente.html
@@ -17,6 +17,7 @@
     <div class="popup">
         <div class="fake_header">
             <h1 id="vaga"><b>G4</b></h1>
+            <!--Nome da vaga em que o veículo está.-->
         </div>
 
         <div class="fake_main">
@@ -24,6 +25,7 @@
                 <li id="align_cli_img">
                     <img src="Imagens/change.png" id="perfil" alt="Foto do cliente"/>
                     <h2>Franscisco Lid</h2>
+                    <!--Simulação da funcionalidade em que o usuário poderá colocar a imagem de um cliente-->
                 </li>
                 <li>
                     <p><em>HJC8607</em></p>
@@ -34,10 +36,12 @@
                 <li>
                     <p>Saída: 23:40</p>
                 </li>
+                <!--Informações sobre a entrada e saída do verículo-->
             </ul>
             
             <a href="index.html">
                 <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
+                <!--Botão de seta para voltar para página anterior-->
             </a>
         </div>
     </div>
