--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <!--Cabeçalho-->
     <title> Estacionado - Detalhes Vagas </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,6 +24,7 @@
         <b>PISO 1</b>
     </span></h2>
     </main>
+    <!--Inteface principal em que mostra uma matrix com as diferentes magas de uma dad área-->
     <div class="coluna">
         <div class="linha">
             <p></p>
@@ -67,6 +69,7 @@
             <img class = "second" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
             <img class = "second" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
         </div>
+        <!--Legenda-->
         <div class="linha"></div>
         <div class="linha">
             <img src="Imagens/Exclamacao.png" alt="Recomendação">
