--- a/detalhes_vaga.html
+++ b/detalhes_vaga.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <!--Cabeçalho-->
     <title> Estacionado - Detalhes Vagas </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,13 +13,15 @@
     <body>
         <div class="atras">
         </div>
-
+        <!--Criação de um popup-->
         <div class="popup">
+            <!--Nome e detalhes da vaga-->
             <div class="fake_header">
                 <h1 id="vaga"><img id="tri_vaga" src="Imagens/bleach.png" alt="Triângulo"><b>2E</b></h1>
             </div>
             <div class="fake_main">
                 <ul id="align_cli">
+                    <!--Detalhes do veículo na vaga-->
                     <li>
                         <p><em>HJC-9805</em></p>
                     </li>
@@ -36,6 +39,7 @@
                         <h2>3 Minutos e 40 Secs</h2>
                     </li>
                 </ul>
+                <!--Botão em seta para voltar-->
                 <a href="index.html">
                     <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
                 </a>
