--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        <!--Cabeçalho-->
         <header class="cabecario">
           <ul class="retirar">
             <li><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></li>
