--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -71,18 +71,32 @@
         </div>
         <!--Legenda-->
         <div class="linha"></div>
-        <div class="linha">
-            <img src="Imagens/Exclamacao.png" alt="Recomendação">
-            <p>-Recomendação</p>
-        </div>
-        <div class="linha">
-            <img src="Imagens/Exclamacao.png" alt="Recomendação">
-            <p>-Área Pouco Utilizada</p>
-        </div>
-        <div class="linha">
-            <img src="Imagens/Exclamacao.png" alt="Recomendação">
-            <p>-Área Muito Utilizada</p>
-        </div>
+                <ul class="linha" id="piso1">
+            <li>
+                <div class="linha">
+                    <img src="Imagens/Exclamacao.png" alt="Recomendação">
+                    <p>-Recomendação</p>
+                </div>
+                <div class="linha">
+                    <img src="Imagens/Exclamacao.png" alt="Recomendação">
+                    <p>-Área Pouco Utilizada</p>
+                </div>
+                <div class="linha">
+                    <img src="Imagens/Exclamacao.png" alt="Recomendação">
+                    <p>-Área Muito Utilizada</p>
+                </div>
+            </li>
+            <li class="linha">
+                <a><img src="Imagens/Seta1.png" alt="Ir para a área 1" id="setas"></a>
+                <p>Área 2</p>
+                <a><img src="Imagens/Seta2.png" alt="Ir para a área 3" id="setas"></a>
+            </li>
+        </ul>
+        <a class='linha2' id="botao_hist">
+            <img src="Imagens/Graphic.png" alt="Gráfico" id="hist">
+            <h3>Histórico</h3>
+        </a>
+
     </div>
 </body>
 </html>
