--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -75,15 +75,15 @@
             <li>
                 <div class="linha">
                     <img src="Imagens/Exclamacao.png" alt="Recomendação">
-                    <p>-Recomendação</p>
+                    -Recomendação
                 </div>
                 <div class="linha">
                     <img src="Imagens/Exclamacao.png" alt="Recomendação">
-                    <p>-Área Pouco Utilizada</p>
+                    -Área Pouco Utilizada
                 </div>
                 <div class="linha">
                     <img src="Imagens/Exclamacao.png" alt="Recomendação">
-                    <p>-Área Muito Utilizada</p>
+                    -Área Muito Utilizada
                 </div>
             </li>
             <li class="linha">
@@ -92,11 +92,6 @@
                 <a><img src="Imagens/Seta2.png" alt="Ir para a área 3" id="setas"></a>
             </li>
         </ul>
-        <a class='linha2' id="botao_hist">
-            <img src="Imagens/Graphic.png" alt="Gráfico" id="hist">
-            <h3>Histórico</h3>
-        </a>
-
     </div>
 </body>
 </html>
