--- a/Analise_hist.html
+++ b/Analise_hist.html
@@ -36,7 +36,7 @@
             <!--"Botão"(Hiperlink por enquanto) de voltar-->
             
             <a href="Piso1.html">
-                <img src="Imagens/back.png" height=25 width=25 alt="Botão de voltar">
+                <img src="Imagens/back.png" alt="Botão de voltar" id="voltar">
             </a>
         </main>
     </body>
