--- a/configuracoes.html
+++ b/configuracoes.html
@@ -29,7 +29,7 @@
                 Central de ajuda <br>
             </p>
 
-            <a href="menu.html"><img src="Imagens/back.png" alt="Botão de Voltar" height=25 width=25></a>
+            <a href="menu.html"><img src="Imagens/back.png" alt="Botão de Voltar" id="voltar"></a>
         </main>
     
     </body>
