--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -19,7 +19,7 @@
     <main>
     <h2><span>
         <a href="index.html">
-            <img src="Imagens/back.png" alt="Botão de Voltar" height=25 width=25>
+            <img src="Imagens/back.png" alt="Botão de Voltar" id="voltar">
         </a>
         <b>PISO 1</b>
     </span></h2>
