--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
             </h2><hr>
             
             <a href="index.html">
-                <img src="Imagens/back.png" alt='botão voltar' width="50" height="50"></a>
+                <img src="Imagens/back.png" alt='botão voltar' id="voltar"></a>
         </main>
     </body>
 </html>
