--- a/Piso1.html
+++ b/Piso1.html
@@ -17,13 +17,17 @@
     </header>
     <main>
 
-    <h1 class="linha" id="piso_1">
-        <a href="index.html">
-            <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
-        </a>
-        Piso 1
-        <p> </p>
-    </h1>
+        <ul class="linha2" id="piso1">
+            <li class="voltar_piso1">
+                <a href="index.html">
+                    <img src="Imagens/back.png" alt='Botão de voltar' class='voltar_piso' id="voltar">
+                </a>
+            </li>
+            <li>
+                <h1>Piso 1</h1>
+            </li>
+        </ul>
+
     <div class="coluna">
         <div class="linha">
             <p></p>
@@ -76,12 +80,12 @@
             </a>
             </li>
             <li class="linha">
-                <a><img src="Imagens/Seta1.png" alt="Ir para a área 1" id="setas"></a>
+                <a><img src="Imagens/Seta1.png" alt="Ir para a área 1" class="setas"></a>
                 <p>Área 2</p>
-                <a><img src="Imagens/Seta2.png" alt="Ir para a área 3" id="setas"></a>
+                <a><img src="Imagens/Seta2.png" alt="Ir para a área 3" class="setas"></a>
             </li>
         </ul>
-        <a class='linha2' id="botao_hist">
+        <a href="Analise_hist.html" class='linha2' id="botao_hist">
             <img src="Imagens/Graphic.png" alt="Gráfico" id="hist">
             <h3>Histórico</h3>
         </a>
