--- a/Analise_hist.html
+++ b/Analise_hist.html
@@ -11,6 +11,7 @@
 
     <!--Cabeçalho igual para todas as páginas-->
     <body>
+
         <header class="cabecario">
             <ul class="retirar">
                 <li><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></li>
@@ -18,7 +19,7 @@
                 <li><img src="Imagens/Logo.png"alt="Logo"></li>
             </ul>
         </header>
-        <main>
+        <main id="main_analise_hist">
             <h2>
                 Selecione a data que deseja analisar:
             </h2>
