--- a/Piso1.html
+++ b/Piso1.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Sketches_css/style.css">
 </head>
 <body>
+    <!--Cabeçalho-->
     <header class="cabecario">
         <ul class="retirar">
             <li><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></li>
@@ -16,7 +17,7 @@
         </ul>
     </header>
     <main>
-
+        <!--Botão para voltar e nome do piso respectivo-->
         <ul class="linha2" id="piso1">
             <li class="voltar_piso1">
                 <a href="index.html">
@@ -27,7 +28,7 @@
                 <h1>Piso 1</h1>
             </li>
         </ul>
-
+    <!--Inteface principal em que mostra uma matrix com as diferentes magas de uma dada área-->
     <div class="coluna">
         <div class="linha">
             <p></p>
@@ -75,17 +76,17 @@
         
         <ul class="linha" id="piso1">
             <li>
-            <a class="botao_leg">
+            <a class="botao_leg"><!--Legenda das imagens da matrix-->
                 Legenda
             </a>
             </li>
-            <li class="linha">
+            <li class="linha"><!--Botões para mudar entre as chamadas áeas do estacionamentos-->
                 <a><img src="Imagens/Seta1.png" alt="Ir para a área 1" class="setas"></a>
                 <p>Área 2</p>
                 <a><img src="Imagens/Seta2.png" alt="Ir para a área 3" class="setas"></a>
             </li>
         </ul>
-        <a href="Analise_hist.html" class='linha2' id="botao_hist">
+        <a href="Analise_hist.html" class='linha2' id="botao_hist"><!--Botão para acessar o histórico do piso-->
             <img src="Imagens/Graphic.png" alt="Gráfico" id="hist">
             <h3>Histórico</h3>
         </a>
