--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -24,7 +24,7 @@
         <b>PISO 1</b>
     </span></h2>
     </main>
-    <!--Inteface principal em que mostra uma matrix com as diferentes magas de uma dad área-->
+    <!--Inteface principal em que mostra uma matrix com as diferentes magas de uma dada área-->
     <div class="coluna">
         <div class="linha">
             <p></p>
